maybe full done

--- a/index.html
+++ b/index.html
@@ -5,17 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masud Rana</title>
-
+    <!--Google Fonts link-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-
+    <!--Custom Css link-->
     <link rel="stylesheet" href="style.css">
+
+    <link rel="shortcut icon" href="./img/shapes/shape-1.png" type="image/x-icon">
 
 
 </head>
 <body>
-    
+    <header id="home">
+        <nav>
+            <ul>
+                <li><a href="#home"> <h2><span class="org-color">Masud</span>  Rana</h2></a></li> 
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#mission">Mission</a></li>
+                <li><a href="#develop">Develop</a></li>
+                <li><a href="#global">Global</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <section>
         <div class="row">
             <div class="col-1 half-width">
@@ -40,7 +54,7 @@
 
     <!--Mission Section Start-->
 
-    <section class="mission-section">
+    <section class="mission-section" id="mission">
 
          <h1>My Mission in <span class="org-color">2022</span></h1>
 
@@ -92,7 +106,7 @@
 
     <!--Develop section start-->
 
-    <section>
+    <section id="develop">
         <div class="develop-parent">
             <div class="dev-left half-width">
                 <div id="position-parent">
@@ -124,7 +138,7 @@
 
     <!--Global section start-->
 
-    <section class="global-section">
+    <section id="global" class="global-section">
         <div class="global-parent">
             <div class="left half-width">
                 <div>
